# creative-coding-fall2022

./: .gitignore  CMakeLists.txt  maker.sh  winregen.bat
Libraries/: CMakeLists.txt
Libraries/glad/: CMakeLists.txt
Libraries/glad-raylib/: CMakeLists.txt
Libraries/glad-raylib/src/: glad-part.c
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
Libraries/glfw-static/: CMakeLists.txt
Libraries/glfw-static/lib/windows-amd64/: glfw3.lib
Libraries/okna/: CMakeLists.txt
Libraries/okna/include/: okna.hpp
Libraries/okna/src/: okna.cpp
Libraries/raygui/: CMakeLists.txt
Libraries/raylib-ext/: CMakeLists.txt
Libraries/raylib-ext/include/: raylib-ext.hpp
Libraries/raylib-ext/src/: raylib-ext.cpp
Libraries/raylib-static/: CMakeLists.txt
Projects/: CMakeLists.txt
Projects/breakout/: main.cpp
Projects/example-project/: CMakeLists.txt  main.cpp
Projects/times-table/: CMakeLists.txt  main.cpp
