cmake_minimum_required(VERSION 3.0)
project (raylib)

add_library(raylib STATIC IMPORTED GLOBAL)
set_target_properties(raylib PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/include)
if(APPLE)
    set_target_properties(raylib PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/macos-arm64/libraylib.a)
    target_link_libraries(raylib INTERFACE "-framework CoreVideo")
    target_link_libraries(raylib INTERFACE "-framework CoreAudio")
    target_link_libraries(raylib INTERFACE "-framework IOKit")
    target_link_libraries(raylib INTERFACE "-framework Cocoa")
    target_link_libraries(raylib INTERFACE "-framework OpenGL")
    target_link_libraries(raylib INTERFACE m)
endif()

if(WIN32)
    set_target_properties(raylib PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/windows-amd64/raylib.lib)
    target_link_libraries(raylib INTERFACE winmm)
    target_link_libraries(raylib INTERFACE kernel32)
    target_link_libraries(raylib INTERFACE opengl32)
    target_link_libraries(raylib INTERFACE gdi32)
endif()

if (UNIX AND NOT APPLE)
    set_target_properties(raylib PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/linux-amd64/libraylib.a)
    target_link_libraries(raylib INTERFACE m)
    target_link_libraries(raylib INTERFACE dl)
    target_link_libraries(raylib INTERFACE pthread)
endif()
